--- a/CRM2/appsettings.json
+++ b/CRM2/appsettings.json
@@ -1,10 +1,13 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:crmprojekt.database.windows.net,1433;Initial Catalog=crm;Persist Security Info=False;User ID=krakers;Password=Funfelnowka12@!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
