--- a/CRM2/appsettings.json
+++ b/CRM2/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "5t3s6jk3s2a5hvdzbj7543sfghsxc"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
