--- a/CRM2/ClientApp/package.json
+++ b/CRM2/ClientApp/package.json
@@ -13,10 +13,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.12",
-    "@angular/cdk": "~8.2.3",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.12",
     "@angular/compiler": "8.2.12",
     "@angular/core": "8.2.12",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "8.2.12",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.12",
@@ -24,6 +25,7 @@
     "@angular/platform-server": "8.2.12",
     "@angular/router": "8.2.12",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "alertifyjs": "^1.13.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
