--- a/CRM2/CRM2.csproj
+++ b/CRM2/CRM2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\app\_render\_button_render\" />
     <Folder Include="ClientApp\src\app\_services\_alertify\" />
     <Folder Include="ClientApp\src\app\_services\_auth\" />
   </ItemGroup>
