--- a/CRM2/CRM2.csproj
+++ b/CRM2/CRM2.csproj
@@ -36,6 +36,8 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\app\_dialog\owner\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\owner\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\owner\edit\" />
     <Folder Include="ClientApp\src\app\_render\_button_render\" />
     <Folder Include="ClientApp\src\app\_services\_owner\" />
     <Folder Include="ClientApp\src\app\_services\_alertify\" />
