--- a/CRM2/CRM2.csproj
+++ b/CRM2/CRM2.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\_model\Animal.ts" />
     <None Remove="ClientApp\src\app\_model\Owner.ts" />
+    <None Remove="ClientApp\src\app\_model\Vet.ts" />
     <None Remove="ClientApp\src\app\_model\Visit.ts" />
   </ItemGroup>
 
@@ -40,6 +41,15 @@
     <Folder Include="ClientApp\src\app\_dialog\animal\add\" />
     <Folder Include="ClientApp\src\app\_dialog\animal\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\animal\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicMed\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicMed\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicMed\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicService\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicService\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicService\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicVaccine\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicVaccine\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\dicVaccine\edit\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\add\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\edit\" />
@@ -50,6 +60,9 @@
     <Folder Include="ClientApp\src\app\_dialog\visit\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\visit\edit\" />
     <Folder Include="ClientApp\src\app\_render\_button_render\" />
+    <Folder Include="ClientApp\src\app\_services\_dicvaccine\" />
+    <Folder Include="ClientApp\src\app\_services\_dicservice\" />
+    <Folder Include="ClientApp\src\app\_services\_dicmed\" />
     <Folder Include="ClientApp\src\app\_services\_vet\" />
     <Folder Include="ClientApp\src\app\_services\_visit\" />
     <Folder Include="ClientApp\src\app\_services\_animal\" />
@@ -61,6 +74,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="ClientApp\src\app\_model\Animal.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\_model\Owner.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\_model\Vet.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\_model\Visit.ts" />
   </ItemGroup>
 
