--- a/CRM2/ClientApp/package.json
+++ b/CRM2/ClientApp/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^2.0.4",
     "@angular/animations": "8.2.12",
     "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.12",
@@ -29,11 +30,15 @@
     "ag-grid-angular": "^24.1.0",
     "ag-grid-community": "^24.1.0",
     "alertifyjs": "^1.13.1",
+    "angular-calendar": "^0.28.22",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "^3.3.3",
+    "date-fns": "^2.16.1",
     "hammerjs": "^2.0.8",
+    "ion2-calendar": "^3.0.0-rc.0",
     "jquery": "3.4.1",
+    "ngx-material-timepicker": "^5.5.3",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
