--- a/CRM2/CRM2.csproj
+++ b/CRM2/CRM2.csproj
@@ -53,9 +53,18 @@
     <Folder Include="ClientApp\src\app\_dialog\dicVaccine\add\" />
     <Folder Include="ClientApp\src\app\_dialog\dicVaccine\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\dicVaccine\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\med\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\med\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\med\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\service\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\service\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\service\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\add\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\owner\edit\" />
+    <Folder Include="ClientApp\src\app\_dialog\vaccine\add\" />
+    <Folder Include="ClientApp\src\app\_dialog\vaccine\delete\" />
+    <Folder Include="ClientApp\src\app\_dialog\vaccine\edit\" />
     <Folder Include="ClientApp\src\app\_dialog\vet\add\" />
     <Folder Include="ClientApp\src\app\_dialog\vet\delete\" />
     <Folder Include="ClientApp\src\app\_dialog\vet\edit\" />
